[gd_scene load_steps=7 format=3 uid="uid://bllqcipxi408k"]

[ext_resource type="Script" path="res://scenes/enemy_and_parts/enemy_malware.gd" id="1_tmyth"]
[ext_resource type="Texture2D" uid="uid://cdgsgobxbi03e" path="res://textures/greengrid.png" id="2_l6vvn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hgedp"]
albedo_texture = ExtResource("2_l6vvn")

[sub_resource type="BoxMesh" id="BoxMesh_p0cpp"]
material = SubResource("StandardMaterial3D_hgedp")

[sub_resource type="SphereShape3D" id="SphereShape3D_0mpef"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6x4nk"]
radius = 5.0

[node name="enemy_malware" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_tmyth")

[node name="shoot_timer" type="Timer" parent="."]

[node name="bob_timer" type="Timer" parent="."]
wait_time = 0.221

[node name="model" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_p0cpp")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.53234e-07, -1, 0, 3.50559, -4.37114e-08, 0, 0, 0.490907)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_0mpef")

[node name="SightRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00942153)
shape = SubResource("SphereShape3D_6x4nk")

[node name="Eyes" type="Node3D" parent="."]

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="bob_timer" to="." method="_on_bob_timer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
